# AgentOps-Labs

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260722_0001_initial_schema.py  20260722_2036_69123479dde7_add_document_id_to_tasks.py  20260723_1148_5b88c38e856c_add_extracted_text_and_content_type_to_.py  20260723_1300_2aefb4ce17b7_add_response_column_to_evaluation_runs.py  20260723_1538_321830aee76b_add_document_chunk_model.py  20260723_1641_626114a5c966_add_embedding_fields_to_document_chunks.py  20260723_1759_d84cbeb6516b_add_llm_metadata_to_evaluation_runs.py
backend/api/: dependencies.py  v1.py
backend/api/routes/: documents.py  evaluation_runs.py  health.py  tasks.py  worlds.py
backend/config/: settings.py
backend/core/: app.py  database.py  exceptions.py  handlers.py  logging.py
backend/models/: __init__.py  base.py  document.py  document_chunk.py  evaluation_run.py  task.py  world.py
backend/repositories/: base.py  document.py  document_chunk.py  evaluation_run.py  task.py  world.py
backend/schemas/: __init__.py  document.py  evaluation_run.py  task.py  world.py
backend/services/: document.py  embedding.py  evaluation_engine.py  evaluation_run.py  extraction.py  judge.py  llm.py  retrieval.py  task.py  world.py
backend/tests/: conftest.py  test_models.py
backend/tests/api/: test_documents.py  test_evaluation_runs.py  test_tasks.py  test_worlds.py
backend/tests/services/: test_embedding.py  test_evaluation_engine.py  test_judge.py  test_llm.py  test_retrieval.py
docs/: AI_DEVELOPER_GUIDE.md  API_SPEC.md  ARCHITECTURE.md  CODING_STANDARDS.md  DATABASE.md  IMPLEMENTATION_PLAYBOOK.md  PROJECT_SPEC.md  ROADMAP.md  SRS.md  UI_SPEC.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/documents/: create-document-modal.tsx  page.tsx  (+1 more)
frontend/components/: dashboard-shell.tsx  page-shell.tsx  theme-provider.tsx  theme-toggle.tsx
(+11 files in other folders)
