[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "enterprise-agent-lab-backend"
version = "0.1.0"
description = "Backend scaffold for Enterprise Agent Lab"
authors = ["Param Patel"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.139.2"
pydantic-settings = "^2.14.2"
uvicorn = { version = "^0.51.0", extras = ["standard"] }
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
alembic = "^1.13"
asyncpg = "^0.30"
psycopg = {extras = ["binary"], version = "^3.3.4"}
pypdf = "^6.14.2"
python-docx = "^1.2.0"
python-multipart = "^0.0.32"
google-genai = "^2.14.0"
tqdm = "^4.69.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.17.0"
pytest = "^8.4.1"
pytest-asyncio = "^0.24"
aiosqlite = "^0.20"
ruff = "^0.12.4"
httpx = "^0.28.1"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = "."
